--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,7 @@
-.App {
-  text-align: center;
+body {
+ background-image: linear-gradient( to left, rgba(81, 127, 165, 0.561),rgba(84, 163, 177, 0.493)); 
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+.dropdown-menu {
+	font-size: 12px;
 }
